--- a/src/components/UI/Card.module.scss
+++ b/src/components/UI/Card.module.scss
@@ -1,5 +1,9 @@
 .card {
   width: 90%;
-  max-width: 768px;
+  max-width: 400px;
   margin: 5rem auto;
+  background-color: #ffffff;
+  border-radius: 2rem 1rem;
+  border: 2px solid #ccc;
+  padding: 2rem;
 }
