--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,4 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap");
 
 *,
 *::before,
@@ -25,7 +10,12 @@
 
 body {
   width: 100%;
+  font-family: "Inconsolata", monospace;
   min-height: 100vh;
   background-color: #fbeaff;
   color: #4b4453;
+}
+
+button {
+  cursor: pointer;
 }
